# astrbot_plugin_kook_adapter

./: .gitignore  README.md  get_latest_tag_and_set.sh  main.py  metadata.yaml  pyproject.toml  ruff.toml
.github/workflows/: release.yml  unittest.yml
kook_adapter/: config.py  kook_adapter.py  kook_client.py  kook_event.py  kook_types.py
tests/: shared.py  test_cases.py  test_kook_event.py  test_kook_types.py
