[project]
name = "astrbot_plugin_kook_adapter"
version = "0.0.6"
description = "给astrbot增加kook的适配器"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "websockets>=10.0",
]

[project.optional-dependencies]
test = [
    "astrbot>=4.18.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-aiohttp>=1.0.0", 
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"